adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate id excepturi laboriosam reiciendis saepe ullam error aspernatur ad mollitia maxime explicabo laborum necessitatibus optio veritatis, voluptas, dolorum ipsa earum labore!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi illum ipsum obcaecati consequuntur, voluptas tenetur voluptatem et alias repellat atque dolor quam iste ab error corrupti, repellendus blanditiis, quas adipisci?</p>
 </body>
 </html>
