Mudei o arquivo index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,6 @@
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate id excepturi laboriosam reiciendis saepe ullam error aspernatur ad mollitia maxime explicabo laborum necessitatibus optio veritatis, voluptas, dolorum ipsa earum labore!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi illum ipsum obcaecati consequuntur, voluptas tenetur voluptatem et alias repellat atque dolor quam iste ab error corrupti, repellendus blanditiis, quas adipisci?</p>
+    <p>Esse parágrafo foi adicionado dentro do GitHub Desktop para LINUX! &LT;3</p>
 </body>
 </html>
